--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="//at.alicdn.com/t/font_jr7l9z8kt4706bt9.css">
-  <title>music</title>
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_efhuhi8fj4hadcxr.css">
+  <link rel="Shortcut Icon" href="//s1.music.126.net/music.ico?v1" type="image/ico">
+  <title>NetEase Cloud Music</title>
 </head>
 <body>
   <div id="root"></div>
